--- a/JavaStudy/3-2/top2.html
+++ b/JavaStudy/3-2/top2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<meta charset="utf-8">  
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">  
 <title>Div Puzzle2</title> 
 <link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="smartStyle2.css">
 </head>
 <body> 
     <div class="wrapper"> 
@@ -22,7 +24,6 @@
             </div>
         </div>
         <div class="footer"></div>
-    </div>
-</div>   
+    </div> 
 </body>
 </html>
