課題提出（Div Puzzle 2)
Div Puzzle 2の修正

--- a/JavaStudy/3-2/top2.html
+++ b/JavaStudy/3-2/top2.html
@@ -14,13 +14,13 @@
             <div class="left"></div> 
             <div class="right">
                 <div class="right-top clearfix">
+                    <div class="right-top-right"></div> 
                     <div class="right-top-left">
                         <div class="right-left-top-top"></div>                  
-                        <div class="right-lest-top-bottom"></div>
-                    </div> 
-                    <div class="right-top-right"></div>  
+                        <div class="right-left-top-bottom"></div>
+                    </div>  
                 </div>
-                <div class="right-botom"></div>
+                <div class="right-bottom"></div>
             </div>
         </div>
         <div class="footer"></div>
